# finance-llm-sec-qna

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
